style: fix alignment

--- a/042-live user filter/style.css
+++ b/042-live user filter/style.css
@@ -8,10 +8,11 @@ body {
   background-color: #f8f9fd;
   font-family: "Roboto", sans-serif;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   height: 100vh;
   overflow: hidden;
+  padding: 20px 10px;
   margin: 0;
 }
 
@@ -19,7 +20,7 @@ body {
   border-radius: 5px;
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
   overflow: hidden;
-  width: 300px;
+  max-width: 300px;
 }
 
 .title {
